--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="normalize.css">
     <title>Weather App</title>
   </head>
   <body>
     <div id="root"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKcF965mlXGqb8b0H6G-mSpYdJlJhXH94"></script>
-    <!--AIzaSyAKcF965mlXGqb8b0H6G-mSpYdJlJhXH94-->
   </body>
 </html>
